--- a/apps/contacts/src/app/contacts-list/contacts-list.css
+++ b/apps/contacts/src/app/contacts-list/contacts-list.css
@@ -1,3 +1,13 @@
 :host {
   display: block;
+
+  & ul {
+    list-style: none;
+    padding-inline-start: 0;
+
+    > * + * {
+      border: 0px solid gray;
+      border-block-start-width: 1px;
+    }
+  }
 }
