--- a/apps/contacts/src/styles.css
+++ b/apps/contacts/src/styles.css
@@ -1,1 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 400;
+  src: url('../assets/fonts/RobotoCondensed-Regular.woff2') format('woff2'),
+    url('../assets/fonts/RobotoCondensed-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 300;
+  src: url('../assets/fonts/RobotoCondensed-Light.woff2') format('woff2'),
+    url('../assets/fonts/RobotoCondensed-Light.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-weight: 700;
+  src: url('../assets/fonts/RobotoCondensed-Bold.woff2') format('woff2'),
+    url('../assets/fonts/RobotoCondensed-Bold.woff') format('woff');
+}
+
+@property --surface-1 {
+  syntax: '<color>';
+  initial-value: #0d1b2a;
+}
+
+@property --surface-2 {
+  syntax: '<color>';
+  initial-value: #1b263b;
+}
+
+@property --surface-3 {
+  syntax: '<color>';
+  initial-value: #415a77;
+}
+
+@property --surface-4 {
+  syntax: '<color>';
+  initial-value: #778da9;
+}
+
+@property --surface-5 {
+  syntax: '<color>';
+  initial-value: #e0e1dd;
+}
+
+:root {
+  --surface-1: #0d1b2a;
+  --surface-2: #1b263b;
+  --surface-3: #415a77;
+  --surface-4: #778da9;
+  --surface-5: #e0e1dd;
+
+  color-scheme: light dark;
+  background-color: light-dark(var(--surface-4), var(--surface-1));
+  color: light-dark(var(--surface-1), var(--surface-5));
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
