--- a/apps/contacts/src/app/contact-details-page/contact-details-page.css
+++ b/apps/contacts/src/app/contact-details-page/contact-details-page.css
@@ -1,30 +1,12 @@
 :host {
-  display: block;
+  display: grid;
   padding: 1rem;
+  gap: 1rem;
 
   header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-
-  a,
-  button {
-    background: light-dark(var(--surface-5), var(--surface-3));
-    border: none;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    color: light-dark(var(--surface-1), var(--surface-5));
-    aspect-ratio: 1;
-    cursor: pointer;
-
-    svg {
-      vertical-align: middle;
-    }
-
-    &:hover {
-      background: light-dark(var(--surface-4), var(--surface-3));
-    }
   }
 
   form {
@@ -33,32 +15,48 @@
 
     img {
       margin-inline: auto;
-      border-radius: 100vmax;
+      border-radius: 2rem;
 
-      /* very new but awesome! */
+      box-shadow: color-mix(in hsl, var(--surface-3), transparent) 0px 10px 50px;
+
       @supports (corner-shape: squircle) {
+        border-radius: 4rem;
         corner-shape: squircle;
       }
+    }
+
+    lucide-icon.avatar {
+      margin-inline: auto;
     }
 
     h3 {
       place-self: center;
       font-size: 1.5rem;
+      text-transform: capitalize;
     }
 
     fieldset {
       display: grid;
       overflow: clip;
       padding: 0;
-      background: light-dark(var(--surface-5), var(--surface-2));
+      background: light-dark(
+        var(--surface-5),
+        color-mix(in hsl, var(--surface-3), transparent 60%)
+      );
       border-radius: 1rem;
+
+      @supports (corner-shape: squircle) {
+        border-radius: 2rem;
+        corner-shape: squircle;
+      }
+
       border: none;
       transition: background-color 150ms ease-in-out;
 
       &:has(:read-only) {
         background: light-dark(
-          var(--surface-5),
-          color-mix(in hsl, var(--surface-2), transparent 50%)
+          color-mix(in hsl, var(--surface-5), transparent 50%),
+          color-mix(in hsl, var(--surface-3), transparent 80%)
         );
       }
     }
@@ -75,7 +73,14 @@
 
       &:focus {
         outline: none;
-        background-color: light-dark(var(--surface-5), var(--surface-3));
+        background-color: light-dark(
+          var(--surface-5),
+          color-mix(in hsl, var(--surface-3), transparent 80%)
+        );
+      }
+
+      &::placeholder {
+        color: var(--surface-3);
       }
     }
 
