--- a/apps/contacts/src/app/contact-item/contact-item.css
+++ b/apps/contacts/src/app/contact-item/contact-item.css
@@ -4,15 +4,16 @@
   a {
     display: grid;
     grid-template-columns: auto 1fr;
-    gap: 1rem;
+    column-gap: 1rem;
     align-items: center;
     padding: 0.5rem;
     text-decoration: none;
     color: inherit;
     transition: all 150ms ease-in-out;
+    border-radius: 1.5rem;
 
     &:hover {
-      background: light-dark(var(--surface-5), var(--surface-2));
+      background: color-mix(in hsl, var(--surface-3), transparent 80%);
     }
 
     &:visited {
@@ -21,7 +22,9 @@
   }
 
   img {
-    border-radius: 100vmax;
+    border-radius: 1rem;
     object-fit: cover;
+    grid-row: span 2;
+    box-shadow: 0 0 5px light-dark(var(--surface-4), var(--surface-2));
   }
 }
