--- a/apps/contacts/src/app/contact-item/contact-item.html
+++ b/apps/contacts/src/app/contact-item/contact-item.html
@@ -1,9 +1,10 @@
 <a [routerLink]="['/contacts', contact().id]">
   <img
-    width="30"
-    height="30"
+    width="50"
+    height="50"
     [ngSrc]="contact().picture.thumbnail"
     [alt]="`profile picture of ${contact().name.first} ${contact().name.last}`"
   />
   <span>{{ contact().name.first }} {{ contact().name.last }}</span>
+  <small>{{ contact().cell }}</small>
 </a>
