--- a/apps/contacts/src/app/contact-item/contact-item.html
+++ b/apps/contacts/src/app/contact-item/contact-item.html
@@ -1,10 +1,16 @@
 <a [routerLink]="['/contacts', contact().id]">
+  @if (contact().picture?.thumbnail; as picture) {
   <img
     width="50"
     height="50"
-    [ngSrc]="contact().picture.thumbnail"
-    [alt]="`profile picture of ${contact().name.first} ${contact().name.last}`"
+    [ngSrc]="picture"
+    [alt]="`profile picture of ${contact().name?.first} ${contact().name?.last}`"
   />
-  <span>{{ contact().name.first }} {{ contact().name.last }}</span>
-  <small>{{ contact().cell }}</small>
+  } @else {
+  <lucide-icon [name]="UserRound" size="50" />
+  }
+  <span class="capitalize"
+    >{{ contact().name?.first }} {{ contact().name?.last }}</span
+  >
+  <small>{{ contact().phone }}</small>
 </a>
