--- a/apps/contacts/src/app/contact-item/contact-item.css
+++ b/apps/contacts/src/app/contact-item/contact-item.css
@@ -3,7 +3,9 @@
 
   a {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: 'avatar name icon' 'avatar phone icon';
     column-gap: 1rem;
     align-items: center;
     padding: 0.5rem;
@@ -21,11 +23,28 @@
     }
   }
 
-  lucide-icon,
+  .avatar,
   img {
+    grid-area: avatar;
     border-radius: 1rem;
     object-fit: cover;
-    grid-row: span 2;
     box-shadow: 0 0 5px light-dark(var(--surface-4), var(--surface-2));
+  }
+
+  .name {
+    grid-area: name;
+  }
+
+  .phone {
+    grid-area: phone;
+    color: var(--surface-3);
+  }
+
+  .icon {
+    grid-area: icon;
+    padding-inline-end: 2rem;
+    color: var(--surface-3);
+    animation: pulse 1s ease-in-out infinite alternate;
+    overflow: visible;
   }
 }
