--- a/apps/contacts/src/app/contacts-page/contacts-page.html
+++ b/apps/contacts/src/app/contacts-page/contacts-page.html
@@ -1,6 +1,10 @@
 <header>
   <h1>Contacts</h1>
-  <button (click)="api.generateRandomContacts(10)" class="button">
+  <button
+    (click)="api.generateRandomContacts(1)"
+    class="button"
+    name="generate Random Contacts"
+  >
     <lucide-icon [name]="Dices" size="24" />
   </button>
   <a routerLink="/contacts/new" class="button">
