--- a/apps/contacts/src/styles.css
+++ b/apps/contacts/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'node_modules/open-props/animations.min.css';
-@import './button.css';
-@import './utils.css';
+@import './styles/button.css';
+@import './styles/utils.css';
 
 @font-face {
   font-family: 'FiraSans';
@@ -45,14 +45,14 @@
 }
 
 :root {
-  --surface-1: rgb(27, 2, 53);
-  --surface-3: rgb(142, 130, 154);
-  --surface-4: rgb(233, 233, 235);
-  --surface-5: rgb(250, 250, 250);
+  --surface-1: #1b0235;
+  --surface-3: #8e829a;
+  --surface-4: #e9e9eb;
+  --surface-5: #fafafa;
 
-  --danger-1: rgb(255, 0, 0);
-  --danger-2: rgb(255, 100, 100);
-  --danger-3: rgb(255, 200, 200);
+  --danger-1: #ff0000;
+  --danger-2: #ff6464;
+  --danger-3: #ffc8c8;
 
   color-scheme: light dark;
   background-color: light-dark(
@@ -79,12 +79,4 @@ body {
   to {
     opacity: 90%;
   }
-}
-
-::view-transition-new(li:has(app-contact-item)):only-child {
-  animation: var(--animation-slide-in-down) forwards;
-}
-
-::view-transition-old(li:has(app-contact-item)):only-child {
-  animation: var(--animation-fade-out) forwards;
 }
