--- a/apps/contacts/src/app/contact-details/contact-details.css
+++ b/apps/contacts/src/app/contact-details/contact-details.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 0.5rem;
   }
 
   form {
@@ -100,5 +101,9 @@
       border: 0px solid light-dark(var(--surface-4), var(--surface-1));
       border-block-start-width: 1px;
     }
+  }
+
+  .button-danger {
+    margin-inline-start: auto;
   }
 }
