contact details cleanup

--- a/apps/contacts/src/app/contact-details/contact-details.html
+++ b/apps/contacts/src/app/contact-details/contact-details.html
@@ -37,7 +37,7 @@
   <lucide-icon class="avatar" [name]="icons.UserRound" size="200" />
   }
 
-  <h3>
+  <h3 class="capitalize">
     @if (name.title.value(); as title) { {{ name.title.value() }}. } {{
     name.first.value() }} {{ name.last.value() }}
   </h3>
