--- a/apps/contacts/src/app/contacts-page/contacts-page.html
+++ b/apps/contacts/src/app/contacts-page/contacts-page.html
@@ -5,10 +5,10 @@
     class="button"
     name="generate Random Contacts"
   >
-    <lucide-icon [name]="Dices" size="24" />
+    <lucide-icon [name]="icons.Dices" size="24" />
   </button>
   <a routerLink="/contacts/new" class="button">
-    <lucide-icon [name]="UserRoundPlus" size="24" />
+    <lucide-icon [name]="icons.UserRoundPlus" size="24" />
   </a>
 </header>
 <main>
