--- a/apps/contacts/src/styles.css
+++ b/apps/contacts/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'https://unpkg.com/open-props';
 
+@import './styles/animations.css';
 @import './styles/button.css';
 @import './styles/utils.css';
 
@@ -70,31 +71,4 @@ body {
 
 * {
   box-sizing: border-box;
-}
-
-@keyframes pulse {
-  from {
-    opacity: 50%;
-  }
-
-  to {
-    opacity: 90%;
-  }
-}
-
-::view-transition-old(root) {
-  animation: none;
-}
-
-::view-transition-new(root) {
-  animation: var(--animation-slide-in-left);
-}
-
-.back-transition::view-transition-new(root) {
-  animation: var(--animation-slide-in-right);
-}
-
-.back-transition::view-transition-old(root) {
-  z-index: -1;
-  animation: var(--animation-slide-out-right);
 }
