--- a/apps/contacts/src/app/contact-details/contact-details.css
+++ b/apps/contacts/src/app/contact-details/contact-details.css
@@ -8,6 +8,11 @@
     align-items: center;
     justify-content: space-between;
     gap: 0.5rem;
+    position: sticky;
+    top: 0;
+    margin: -1rem;
+    padding: 1rem;
+    backdrop-filter: blur(2rem);
   }
 
   form {
@@ -17,6 +22,13 @@
     img {
       margin-inline: auto;
       border-radius: 2rem;
+
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+
+      animation: scale;
+      animation-timeline: scroll(root block);
 
       box-shadow: color-mix(in hsl, var(--surface-3), transparent) 0px 10px 50px;
 
